--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images\img01.jpg" width="200" alt="Fanindra Kumar picture"></td>
+                <td><img src="img01.jpg" width="200" alt="Fanindra Kumar picture"></td>
                 <td><h1>Fanindra Kumar</h1>
                     <p><em>Founder and CTO of the <strong><a href="http://www.google.com">Sahani Beej Bhandar.</a></strong></em></p>
                     <p>I am an iOS and Web Developer. I love coffee and brew my own beer.</p></td>
